Fixed clearConsole Method.
Thanks to Holger @ StackOverflow.com