@@ -44,7 +44,7 @@ public final class Support
 			
 			if (os.contains("Windows"))
 			{
-				Runtime.getRuntime().exec("cls");
+				new ProcessBuilder("cmd", "/c", "cls").inheritIO().start().waitFor();
 			}
 			else
 			{
